--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ python-dotenv>=1.0.0
 
 # Utilities
 python-dateutil>=2.8.2
+pandas>=2.1.0
+streamlit>=1.30.0
+plotly>=5.18.0
+altair>=5.2.0
+cffi>=1.16.0
+cryptography>=41.0.0
